@@ -1,3 +1,7 @@
+2010-06-08  Oliver Hader  <oliver@typo3.org>
+
+	* Cleanup: Fixed formatting of t3lib_PageRenderer_testcase
+
 2010-06-08  Steffen Kamper  <info@sk-typo3.de>
 
 	* Fixed bug #14611: [Install] Content of Input Fields is not displayed completely
